artifacthub/library/general/uniqueserviceselector/1.0.2/samples/unique-service-selector/example_disallowed.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-test-service-disallowed
  namespace: default
spec:
  ports:
    - port: 443
  selector:
    key: value
