artifacthub/library/general/uniqueserviceselector/1.0.2/samples/unique-service-selector/example_inventory_disallowed.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-test-service-example
  namespace: default
spec:
  ports:
    - port: 443
  selector:
    key: other-value
