artifacthub/library/general/uniqueserviceselector/1.0.2/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: uniqueserviceselector
tests:
- name: unique-service-selector
  template: template.yaml
  constraint: samples/unique-service-selector/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/unique-service-selector/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/unique-service-selector/example_disallowed.yaml
    inventory:
    - samples/unique-service-selector/example_inventory_disallowed.yaml
    assertions:
    - violations: yes
